--- a/kubernetes/loki.yaml
+++ b/kubernetes/loki.yaml
@@ -233,5 +233,15 @@ spec:
         - name: config
           secret:
             secretName: loki
-        - name: storage
-          emptyDir: {}
+  volumeClaimTemplates:
+  - metadata:
+      name: storage
+      annotations:
+        {}
+    spec:
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: "10Gi"
+      storageClassName: cephfs
