--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,10 @@
 persistence:
   enabled: True
   storageClassName: cephfs
+
+chunk_store_config:
+  max_look_back_period: 720h
+
+table_manager:
+  retention_deletes_enabled: true
+  retention_period: 720h
